# yew-scaffold

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md
backend/: Cargo.toml  build.rs
backend/src/: main.rs
common/: Cargo.toml
frontend/: Cargo.toml  index.html
frontend/css/: style.scss
frontend/public/: app.js  app_bg.wasm
frontend/src/: app.rs  lib.rs
frontend/src/containers/: base.rs
frontend/src/pages/: home.rs
run/: Cargo.toml
