[package]
name = "frontend"
version = "0.0.0"
authors = ["justenb"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3"


[dependencies]
wasm-bindgen = "^0.2"
yew = { version="0.17.3", features=["web_sys"] }
yewtil = { version="0.3.2", features=["neq"] }
yew-router = { version="0.14.0", features=["web_sys"] }
anyhow = "1"
ybc = "*"
common = {path = "../common"}

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']